convert ticket machines to dialog